# greenlit-takehome

./: README.md  main.py  pyproject.toml
controller/: company_controller.py  film_controller.py  user_controller.py
models/: companies_model.py  db_connection.py  film_model.py  user_model.py
router/: all_routers.py  schemas.py
